examples/test/testpolicy9074.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9074
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key44: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value32
          key2: value41
      podSelector:
        matchLabels:
          key21: value22
          key48: value39
